updating PsModulePath rather than overwriting it.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,7 @@
-environment:
-  PsModulePath: C:\windows\system32\WindowsPowerShell\v1.0\Modules\;C:\Program Files\WindowsPowerShell\Modules;C:\Projects
-
 install: 
     - cinst -y pester
     - git clone https://github.com/PowerShell/DscResource.Tests
+    - ps: | $env:PsModulePath = $env:PsModulePath + ";C:\Projects"
 
 build: false
 
