--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 install: 
     - cinst -y pester
     - git clone https://github.com/PowerShell/DscResource.Tests
-    - ps: | $env:PsModulePath = $env:PsModulePath + ";C:\Projects"
+    - ps: $env:PsModulePath = $env:PsModulePath + ";C:\Projects"
 
 build: false
 
