--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,14 @@
 install: 
     - cinst -y pester
     - git clone https://github.com/PowerShell/DscResource.Tests
-    - ps: $env:PsModulePath = $env:PsModulePath + ";C:\Projects"
 
 build: false
 
 test_script:
     - ps: |
         $testResultsFile = ".\TestsResults.xml"
+        $tempModulePath = (Resolve-Path (join-path $PWD '..')).ProviderPath
+        $env:PSModulePath = "$env:PSModulePath;$tempModulePath"        
         $res = Invoke-Pester -OutputFormat NUnitXml -OutputFile $testResultsFile -PassThru
         (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path $testResultsFile))
         if ($res.FailedCount -gt 0) { 
