--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,7 @@
 install: 
     - cinst -y pester
     - git clone https://github.com/PowerShell/DscResource.Tests
+    - whoami /groups
 
 build: false
 
