replaced Robocopy with PowerShell copy

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ install:
     - ps: winrm quickconfig -quiet
     - ps: test-wsman
     - ps: $env:PsModulePath
-    - Robocopy C:\projects\xpsdesiredstateconfiguration C:\Users\appveyor\Documents\WindowsPowerShell\Modules\xpsdesiredstateconfiguration /S /NDL /NFL
+    - ps: Get-ChildItem C:\projects -include xPSDesiredStateConfiguration -Recurse | copy-item -Destination C:\Users\appveyor\Documents\WindowsPowerShell\Modules -Recurse -force
 
 build: false
 
