--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,21 @@
 os: WMF 5
 version: 3.11.{build}.0
 install:
-  - cinst -y pester
+  - ps: |
+    # build last 3 hours, subtract 5 minutes for buffer
+    Get-PackageProvider -Name nuget -ForceBootstrap -Force 
+    Set-PSRepository -Name PSGallery -InstallationPolicy Trusted
+    (Get-date).AddHours(3).AddMinutes(-5) | Export-Clixml -Path .\BuildTimeout.xml
+    $installed = $false
+    $retries = 1
+    while($retries -lt 10 -and !$installed)
+    {
+        Write-Verbose -message "Attempting to install Pester, attempt # $retries"
+        @(find-module 'Pester' -Repository PSGallery -ErrorAction SilentlyContinue) | Install-Module -force
+        $installed = ($LASTEXITCODE -eq 0)
+        $retries++
+    }
+    
   - git clone https://github.com/PowerShell/DscResource.Tests
   - ps: Push-Location
   - cd DscResource.Tests
