--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,13 +8,15 @@ install:
     - docker images
     - docker create -t --name TestNanoServer -h NanoServer -i microsoft/nanoserver
     - docker start -i TestNanoServer
-    - git clone https://github.com/PowerShell/DscResource.Tests
+    - docker git clone https://github.com/PowerShell/DscResource.Tests
+    - docker PowerShell
     - ps: |
         Get-ComputerInfo -Verbose
         $moduleName = 'xPSDesiredStateConfiguration'
         Import-Module -Name "$env:APPVEYOR_BUILD_FOLDER\DscResource.Tests\AppVeyor.psm1"
         Invoke-AppveyorInstallTask
     - docker stop TestNanoServer
+
 #---------------------------------#
 #      build configuration        #
 #---------------------------------#
