--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,8 @@ install:
     - docker images
     - docker create -t --name testnanoserver -h NanoServer -i microsoft/nanoserver
     - docker ps -a
+    - docker copy testnanoserver . /Install
+    - docker start -i testnanoserver
     - docker run testnanoserver powershell -noprofile -command "get-computerInfo -verbose"
     #- docker start -i TestNanoServer
     - docker exec -i -t TestNanoServer git clone https://github.com/PowerShell/DscResource.Tests
