--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,11 @@
 #      environment configuration  #
 #---------------------------------#
 version: 6.0.{build}.0
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+environment:
+  APPVEYOR_RDP_PASSWORD:
+    secure: AYfj44mFhpGWgauvxI4IPg==
 image:
     - Visual Studio 2017
 install:
@@ -49,3 +54,5 @@ deploy_script:
   - ps: |
         Invoke-AppveyorAfterTestTask `
             -ResourceModuleName $moduleName
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
