--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ install:
     - docker exec -i -t testnanoserver PowerShell
     - docker exec -i -t testnanoserver Get-ComputerInfo -Verbose
     - docker exec -i -t testnanoserver $moduleName = 'xPSDesiredStateConfiguration'
-    - docker exec -i -t testnanoserver Import-Module -Name "$env:APPVEYOR_BUILD_FOLDER\DscResource.Tests\AppVeyor.psm1"
+    - docker exec -i -t testnanoserver Import-Module -Name "$env:APPVEYOR_BUILD_FOLDER\DscResource.Tests\AppVeyor.psm1" -verbose
     - docker exec -i -t testnanoserver Invoke-AppveyorInstallTask
     - docker stop testnanoserver
 
