--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,21 +10,8 @@ environment:
 image:
     - Visual Studio 2017
 install:
+    - docker build testnano
     - docker images
-    #- docker run --name testnanoserver microsoft/nanoserver
-    - docker create -t --name testnanoserver -h NanoServer -i microsoft/nanoserver
-    - docker ps -a
-    - docker cp C:\projects\xpsdesiredstateconfiguration\. testnanoserver:/Install
-    - docker exec -it testnanoserver powershell -noprofile -command "get-computerInfo -verbose"
-    # docker start -i testnanoserver
-    - docker exec -i -t testnanoserver git clone https://github.com/PowerShell/DscResource.Tests
-    - docker exec -i -t testnanoserver PowerShell
-    - docker exec -i -t testnanoserver Get-ComputerInfo -Verbose
-    - docker exec -i -t testnanoserver $moduleName = 'xPSDesiredStateConfiguration'
-    - docker exec -i -t testnanoserver Import-Module -Name "$env:APPVEYOR_BUILD_FOLDER\DscResource.Tests\AppVeyor.psm1" -verbose
-    - docker exec -i -t testnanoserver Invoke-AppveyorInstallTask
-    - docker stop testnanoserver
-
 #---------------------------------#
 #      build configuration        #
 #---------------------------------#
