--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ environment:
 image:
     - Visual Studio 2017
 install:
+    - ps: get-module -verbose
     - docker pull microsoft/nanoserver
     - docker build -t testnanoserver .
     - docker images
