--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,6 +69,12 @@ stages:
           vmImage: 'vs2017-win2016'
         timeoutInMinutes: 0
         steps:
+          - powershell: |
+              $repositoryOwner,$repositoryName = $env:BUILD_REPOSITORY_NAME -split '/'
+              echo "##vso[task.setvariable variable=RepositoryOwner;isOutput=true]$repositoryOwner"
+              echo "##vso[task.setvariable variable=RepositoryName;isOutput=true]$repositoryName"
+            name: DscBuildVariable
+
           - task: DownloadBuildArtifacts@0
             inputs:
               buildType: 'current'
@@ -133,6 +139,12 @@ stages:
           vmImage: 'windows-2019'
         timeoutInMinutes: 0
         steps:
+          - powershell: |
+              $repositoryOwner,$repositoryName = $env:BUILD_REPOSITORY_NAME -split '/'
+              echo "##vso[task.setvariable variable=RepositoryOwner;isOutput=true]$repositoryOwner"
+              echo "##vso[task.setvariable variable=RepositoryName;isOutput=true]$repositoryName"
+            name: DscBuildVariable
+
           - task: DownloadBuildArtifacts@0
             inputs:
               buildType: 'current'
